Ολοκλήρωση του Restaurant Repository

--- a/RestaurantBookingSystem.Operations/RestaurantBookingSystem.Operations.csproj
+++ b/RestaurantBookingSystem.Operations/RestaurantBookingSystem.Operations.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RestaurantBookingSystem.Data\RestaurantBookingSystem.Data.csproj" />
+  </ItemGroup>
+
 </Project>
