Δημιουργία ξεχωριστού περιβάλλοντος για πελάτες, καταστηματάρχες και διαχειριστές

--- a/RestaurantBookingSystem.App/RestaurantBookingSystem.App.csproj
+++ b/RestaurantBookingSystem.App/RestaurantBookingSystem.App.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RestaurantBookingSystem.Data\RestaurantBookingSystem.Data.csproj" />
+    <ProjectReference Include="..\RestaurantBookingSystem.Operations\RestaurantBookingSystem.Operations.csproj" />
   </ItemGroup>
 
 </Project>
