--- a/RestaurantBookingSystem.App/Properties/launchSettings.json
+++ b/RestaurantBookingSystem.App/Properties/launchSettings.json
@@ -16,7 +16,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7123;http://localhost:5146"
+      "applicationUrl": "https://localhost:7123;http://localhost:5146",
+      "launchUrl": "Administration/Index"
     },
     "IIS Express": {
       "commandName": "IISExpress",
