Διόρθωση σελίδων για Restaurants

--- a/RestaurantBookingSystem.App/RestaurantBookingSystem.App.csproj
+++ b/RestaurantBookingSystem.App/RestaurantBookingSystem.App.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\RestaurantBookingSystem.Operations\RestaurantBookingSystem.Operations.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Administration\Clients\" />
+  </ItemGroup>
+
 </Project>
