Δημιουργία δομής διαχείρισης ενός εστιατορίου

--- a/RestaurantBookingSystem.App/RestaurantBookingSystem.App.csproj
+++ b/RestaurantBookingSystem.App/RestaurantBookingSystem.App.csproj
@@ -21,4 +21,9 @@
     <ProjectReference Include="..\RestaurantBookingSystem.Operations\RestaurantBookingSystem.Operations.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\RestaurantUsers\Customers\" />
+    <Folder Include="Pages\RestaurantUsers\Reservations\" />
+  </ItemGroup>
+
 </Project>
