Κατασκευή αυθεντiκοποίησης jwt

--- a/RestaurantBookingSystem.App/appsettings.json
+++ b/RestaurantBookingSystem.App/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "SecretKey": "c696e3d8-ae26-45da-9b92-897abe7ebe79",
+    "Issuer": "RestaurantBookingApp",
+    "Audience": "RestaurantBookingApp_Users",
+    "ExpirationMinutes": 60
+  }
 }
