--- a/RestaurantBookingSystem.App/Properties/launchSettings.json
+++ b/RestaurantBookingSystem.App/Properties/launchSettings.json
@@ -17,7 +17,7 @@
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7123;http://localhost:5146",
-      "launchUrl": "Administration/Index"
+      "launchUrl": "Profile/Login"
     },
     "IIS Express": {
       "commandName": "IISExpress",
